--- a/src/Stylesheet/style.css
+++ b/src/Stylesheet/style.css
@@ -119,3 +119,20 @@
     width: 60%;
     text-align: left;
   }
+  .regBtn{
+    float: right;
+  }
+  .form{
+      position: relative;
+  }
+  .form__register{
+    /* min-height: 100vh;
+    width: 50%; */
+     display: flex; 
+     /* position: absolute; */
+     /* top:50%;
+     right:50%; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+  }
